apps/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: lscr.io/linuxserver/code-server
          volumeMounts:
            - name: code-server-pvc
              mountPath: "/config"
          ports:
            - containerPort: 8443
          readinessProbe:
            httpGet:
              path: /
              port: 8443
          livenessProbe:
            httpGet:
              path: /
              port: 8443
      volumes:
        - name: code-server-pvc
          persistentVolumeClaim:
            claimName: code-server-pvc
