apps/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
