apps/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: code-server
  annotations:
    external-dns.alpha.kubernetes.io/target: ""
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: code-server.atoca.house
    http:
      paths:
      - backend:
          service:
            name: code-server
            port:
              number: 80
        path: /
        pathType: Prefix
